Changed it so not a whole track object is retrieved to see if an id exists